Adição do filtro e da paginação no GET All